--- a/examples/cookbook/erc20_lookup.ipynb
+++ b/examples/cookbook/erc20_lookup.ipynb
@@ -6,6 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "This is a basic example demonstrating how EMP agents can interface with the blockchain.\n",
+    "We'll use the ERC20Skill to get information about a token.\n",
+    "We'll set the network in advance to simplify the code.\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
     "import os\n",
     "\n",
     "from emp_agents.agents.persistentagent import PersistentAgent, PersistentAgentConfig\n",
