--- a/examples/cookbook/erc20_lookup.ipynb
+++ b/examples/cookbook/erc20_lookup.ipynb
@@ -18,7 +18,7 @@
     "from emp_agents.agents.persistentagent import PersistentAgent, PersistentAgentConfig\n",
     "from emp_agents.models.protocol.registry import ToolRegistry\n",
     "from emp_agents.tools.protocol.network import NetworkSkill\n",
-    "from emp_agents.types import OpenAIModelType\n",
+    "from emp_agents.providers import OpenAIProvider, OpenAIModelType\n",
     "\n",
     "erc20_skill = ToolRegistry.get_skill(\"ERC20Skill\")\n",
     "\n",
@@ -34,7 +34,8 @@
     "        extra={\n",
     "            \"openai_api_key\": os.environ.get(\"OPENAI_API_KEY\"),\n",
     "        },\n",
-    "    )\n",
+    "    ),\n",
+    "    OpenAIProvider(),\n",
     ")\n",
     "\n",
     "info = await agent.answer(\"Tell me about the ERC20 coin at 0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2 on Ethereum.\")\n",
