--- a/examples/cookbook/erc20_multishot_lookup.ipynb
+++ b/examples/cookbook/erc20_multishot_lookup.ipynb
@@ -98,7 +98,7 @@
     "    ToolCall,\n",
     "    Message,\n",
     ")\n",
-    "from emp_agents.types import OpenAIModelType\n",
+    "from emp_agents.providers import OpenAIProvider, OpenAIModelType\n",
     "\n",
     "example: Example = (\n",
     "    UserMessage(\n",
@@ -164,7 +164,8 @@
     "        extra={\n",
     "            \"openai_api_key\": os.environ.get(\"OPENAI_API_KEY\"),\n",
     "        },\n",
-    "    )\n",
+    "    ),\n",
+    "    provider=OpenAIProvider(),\n",
     ")\n",
     "\n",
     "# Flatten example into messages we can feed into the agent.\n",
